src/objects/Core_IPS_Case_Attachments__c.object
<CustomObject>
    <fields>
        <fullName>Core_Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>IPS_Case_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Analyzer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOS/Firmware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patches</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_FileSizeInBytes__c</fullName>
        <label>File Size InBytes</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_FileUploadedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>File Uploaded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPS_Case_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_File_Description__c</fullName>
        <label>File Description</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_File_GUID__c</fullName>
        <label>File GUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_File_Hyperlink__c</fullName>
        <formula>IF(ISPICKVAL(Core_Upload_Status__c, &apos;Complete&apos;),HYPERLINK(Core_File_URL__c ,&apos;Download&apos;,&apos;Self&apos;),TEXT(Core_Upload_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Download Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_File_Size__c</fullName>
        <label>File Size</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_File_URL__c</fullName>
        <label>File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Core_IPS_File_Upload__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IPS File Upload</label>
        <referenceTo>Core_IPS_File_Upload_Master__c</referenceTo>
        <relationshipLabel>IPS Case Attachments</relationshipLabel>
        <relationshipName>IPS_Case_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Is_Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Last_Status_Updated_At__c</fullName>
        <label>Upload Status Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Core_Promote_Status__c</fullName>
        <label>Promote Status</label>
        <picklist>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Attachment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Upload_Status__c</fullName>
        <label>Upload Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Upload_UserId__c</fullName>
        <label>Upload UserId</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Upload_idsid__c</fullName>
        <label>Upload idsid</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>IPS Case Attachment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>IPS Case Attachment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPS Case Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Core_IPS_Prevent_Edit_Until_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(Core_Upload_Status__c, &apos;Complete&apos;)),
($Profile.Name &lt;&gt; $Label.Core_System_Admin_Profile_Name),
($Profile.Name &lt;&gt; $Label.Core_IT_Admin_Profile_Name),
($Profile.Name &lt;&gt; $Label.Core_Integration_Profile_Name),
($Profile.Name &lt;&gt; $Label.Core_IPS_DataMigration_ProfileName)
)</errorConditionFormula>
        <errorMessage>No Edits allowed until File Upload Status is set to &apos;Complete&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Core_IPS_Prevent_StatusChng_FromComplete</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE( Core_Upload_Status__c ),&quot;Complete&quot;), NOT(ISPICKVAL( Core_Upload_Status__c ,&quot;Complete&quot;))
)</errorConditionFormula>
        <errorMessage>Status Change not allowed once set to Complete</errorMessage>
    </validationRules>
</CustomObject>